spacing fixes for box accordion toggle

--- a/scss/components/_accordion.scss
+++ b/scss/components/_accordion.scss
@@ -13,7 +13,7 @@
 
   .box-accordion-top {
     height: 100%;
-    min-height: 21rem;
+    min-height: 2rem;
     padding: 2.4rem;
     box-shadow: 0 1px 4px 0 #BBBBBB;
     display: flex;
@@ -61,7 +61,7 @@
       background-image: image('box-accordion-plus.svg');
       background-size: 3.2rem;
       background-repeat: no-repeat;
-      background-position: left;
+      background-position: left 0.8rem;
     }
   }
 
